--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run: echo "npm installing"
       - run: npm install --silent
-      - run: CI=true npm run build
+      - run: npm run build
   test:
     docker:
       - image: cimg/node:14.10.1
